# data-api

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  download.py  lint.sh  list_indices.py  main.py  mypy.ini  publish.sh  pyproject.toml  pytest.ini  requirements.txt  run_gazetteers.py  run_index.py  run_migrations.py  setup.cfg  test.db  test_fast_debug.py  test_fast_import.py
.github/workflows/: ruff.yml
app/: main.py  viewers.py
app/api/v1/: admin.py  auth.py  endpoints.py  gazetteer.py  jsonp.py  shapefiles.py  shared.py  utils.py
app/elasticsearch/: __init__.py  client.py  index.py  mappings.py  search.py
app/events/: document_events.py
app/gazetteer/: __init__.py  download.py  import_all.py
app/gazetteer/downloaders/: __init__.py  base_downloader.py  fast_downloader.py  geonames_downloader.py  wof_downloader.py
app/gazetteer/importers/: __init__.py  base_importer.py  btaa_importer.py  fast_importer.py  geonames_importer.py  wof_importer.py
app/services/: README_GAZETTEER.md  __init__.py  allmaps_service.py  cache_service.py  citation_service.py  download_service.py  gazetteer_service.py  image_service.py  llm_service.py  relationship_service.py  search_service.py  viewer_service.py
app/services/llm/: __init__.py  geo_entity_identifier.py  summary_generator.py
app/tasks/: __init__.py  entities.py  ocr.py  summarization.py  worker.py
data/: aardvark_json_schema.json  btaa_geometadata_api.txt  parade_db_gbl_table.py  solr_export_gbl_csv.py
data/duckdb/: btaa_ogm_api.duckdb
data/schemas/: search.schema.json
db/: config.py  create_tables.py  database.py  models.py
db/migrations/: add_enrichment_type.py  add_fast_gazetteer.py  create_ai_enrichments.py  create_document_relationships.py  create_fast_embeddings.py  create_gazetteer_tables.py  create_item_allmaps_table.py  create_item_relationships.py  rename_ai_enrichments.py  rename_document_id_to_item_id.py  update_fast_gazetteer.py
docs/: fast_importer.md  gazetteer_api.md  gazetteer_data_management.md  llm_service.md  migrate_solr_data.md  scripts.md  search.md  testing.md
examples/: geo_entity_example.py
scripts/: clear_cache.py  generate_fast_embeddings.py  import_fast.py  load_fixtures.py  load_test_data.py  populate_relationships.py  process_allmaps.py  run_migration.py  test_gazetteer_api.py
tests/: README.md  conftest.py  load_test_fixtures.py  setup_db.py  test_cache_service.py  test_mappings.py  test_sanity.py  test_settings.py  test_simple.py
tests/api/: test_example.py
tests/api/v1/: conftest.py  test_document_endpoints.py  test_endpoints.py  test_gazetteer_endpoints.py  test_search_endpoints.py  test_utility_endpoints.py
tests/elasticsearch/: test_client.py  test_mappings.py
tests/fixtures/: gbl_fixtures_data.csv
tests/services/: test_download_service.py
tests/viewers/: test_viewers.py
