[project]
name = "data-api"
version = "0.1.0"
description = "BTAA Geodata API"
authors = [
    {name = "Eric Larson", email = "ewlarson@gmail.com"},
]
dependencies = [
    "celery>=5.3.0",
    "elasticsearch>=9.0.0",
    "python-dotenv>=1.0.0",
    # Add your main dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.25.3",
    "ruff>=0.2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules, pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ["E", "F", "B", "I"]
ignore = []

# Same line length as previously defined
line-length = 100

# Allow imports to be organized by type, the same way isort is configured
src = ["app", "tests", "scripts"]

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

# Assume Python 3.9
target-version = "py39"

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with 4 spaces
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["celery", "elasticsearch", "dotenv"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"

