[project]
name = "data-api"
version = "0.1.0"
description = "BTAA Geodata API"
authors = [
    {name = "Eric Larson", email = "ewlarson@gmail.com"},
]
dependencies = [
    "celery>=5.3.0",
    "elasticsearch>=9.0.0",
    "python-dotenv>=1.0.0",
    # Add your main dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.25.3",
    "ruff>=0.11.6",
]

[tool.setuptools]
packages = ["app"]

# Simple Ruff configuration - compatible with v0.11.6
[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

